# pulsetrader

./: .gitignore  pyproject.toml
reports/: market_digest_20250202_201530.md  market_digest_20250202_202228.md  market_digest_20250202_203222.md  market_digest_20250202_221210.md
src/: __init__.py  config.py  main.py  trading_bot.py
tests/: list_markets.py  market_news_digest.py  market_overview.py  test_coinbase_connection.py  test_connection.py  test_sandbox.py
